@@ -1,4 +1,4 @@
-/* $Id: tmux.h,v 1.74 2007-10-26 17:15:50 nicm Exp $ */
+/* $Id: tmux.h,v 1.75 2007-10-30 11:10:33 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -556,6 +556,7 @@ extern const struct cmd_entry cmd_rename_window_entry;
 extern const struct cmd_entry cmd_select_window_entry;
 extern const struct cmd_entry cmd_send_prefix_entry;
 extern const struct cmd_entry cmd_set_option_entry;
+extern const struct cmd_entry cmd_swap_window_entry;
 extern const struct cmd_entry cmd_unbind_key_entry;
 extern const struct cmd_entry cmd_unlink_window_entry;
 void	cmd_select_window_default(void **, int);
